--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,11 @@
 name: ci-test
+
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
+
 jobs:
   test:
     name: Test
@@ -16,19 +18,8 @@ jobs:
           go-version: ^1.15
         id: go
 
-      - name: Check out code into the go module directory
+      - name: Check out code into the Go module directory
         uses: actions/checkout@v2
-
-      - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-          if [ -f Gopkg.toml ]; then
-              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-              dep ensure
-          fi
-
-      - name: Build
-        run: go build -v .
 
       - name: Test
         run: make test
