--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,6 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
 
-    env:
-      DB_DRIVER: ${{ secrets.DB_DRIVER }}
-      DB_SOURCE: ${{ secrets.DB_SOURCE }}
-      SERVER_ADDRESS: ${{ secrets.SERVER_ADDRESS }}
-
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
@@ -25,6 +20,9 @@ jobs:
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+
+      - name: Copy .env File
+        run: cp .env /home/runner/work/go-bank/go-bank
 
       - name: Install golang-migrate
         run: |
