--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,7 +7,7 @@ packages:
     engine: "postgresql"
     emit_json_tags: true
     emit_prepared_queries: false
-    emit_interface: false
+    emit_interface: true
     emit_exact_table_names: false
     # this will return empty slices instead of nil
     emit_empty_slices: true
